--- a/app/src/main/res/layout/activity_qrcode_generate.xml
+++ b/app/src/main/res/layout/activity_qrcode_generate.xml
@@ -41,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/round_arrow_drop_down_black_48"
+                android:layout_margin="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="24dp"
+                android:layout_marginTop="0dp"
                 android:textColor="@color/blue_grey_900"
                 android:textSize="18sp"
                 android:textStyle="bold" />
