--- a/app/src/main/res/layout/item_saved_wifi.xml
+++ b/app/src/main/res/layout/item_saved_wifi.xml
@@ -2,10 +2,12 @@
 
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/saved_wifi_cardview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
+    android:layout_marginTop="1dp"
+    app:cardCornerRadius="0dp"
     android:elevation="6dp">
 
     <LinearLayout
@@ -16,14 +18,18 @@
 
         <TextView
             android:id="@+id/saved_ssid"
-            android:layout_width="wrap_content"
-
+            android:layout_width="0dp"
+            android:layout_margin="8dp"
+            android:layout_marginLeft="24dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textColor="@color/blue_grey_900"
-            android:textSize="16sp" />
+            android:textSize="24sp" />
 
         <TextView
-
+            android:layout_gravity="end|center_vertical"
+            android:layout_margin="8dp"
+            android:textSize="18sp"
             android:id="@+id/saved_capability"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
